[package]
name = "ns-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
console_log = "1.0.0"
bytemuck = { version = "1.24", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]