[package]
name = "ns-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]

# Janela
winit = { version = "0.30", features = ["android-native-activity"] }

# WGPU (simulation)
wgpu = "28.0"

# egui (gui)


# Math
cgmath = "0.18"

# Log and Errors
log = "0.4"
console_log = "1.0.0"
env_logger = "0.10"
anyhow = "1.0"

# Utils
pollster = "0.3" # async
bytemuck = { version = "1.24", features = [ "derive" ] } # for bytes control
wasm-bindgen = "0.2.108"        # suport to wasm (maybe we dont need that,
wasm-bindgen-futures = "0.4.58" # but this still here for no problemns)

# Image
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]