[package]
name = "ns-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]

# Window
winit = "0.30"

# GPU
wgpu = "27"

# GUI
egui = "0.33"
egui-winit = "0.33"
egui-wgpu = "0.33"

# Math
cgmath = "0.18"

# Logging
log = "0.4"
console_log = "1.0"
env_logger = "0.10"
anyhow = "1.0"

# Utils
pollster = "0.3"
bytemuck = { version = "1.24", features = ["derive"] }

# wasm support
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"

# Images
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]